--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,7 @@
         -moz-border-radius: 70px;
         -webkit-border-radius: 70px;
         border-radius: 70px;
-        background-color: #080808;
+        background-color: #dfdfdf;
         border: 2px solid snow;
         position: relative;
         display: table;
