--- a/templates/header.html
+++ b/templates/header.html
@@ -26,14 +26,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="/">Home</a></li>
                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/about/staff/">Staff</a></li>
                         <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
                         <li><a href="/about/history/">Parish History</a></li>
                         <li><a href="/about/mass/">Mass</a></li>
-                        <li><a href="/about/mass/">Mission Statement</a></li>
+                        <li><a href="/about/mission-statement/">Mission Statement</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/about/directions/">Directions</a></li>
                         <li><a href="/about/contact/">Contact</a></li>
