--- a/templates/header.html
+++ b/templates/header.html
@@ -54,14 +54,16 @@
                 <li><a href="https://gallery.millhousenchurch.com/">Photo Gallery</a></li>
 
             </ul>
-            <!--    <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <span class="caret"></span></a>
+            <ul class="nav navbar-nav navbar-right">
+                <!-- <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/about/auction/">Auction</a></li>
 
                     </ul> 
-                </li>
-            </ul> -->
+                </li> -->
+                <li><a href="/events/auction/">Auction</a></li>
+
+            </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
