--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@
     
     body {
         /* Margin bottom by footer height */
-        margin-bottom: 40px;
+        margin-bottom: 60px;
     }
     
     .footer {
@@ -83,13 +83,13 @@
         bottom: 0;
         width: 100vw;
         /* Set the fixed height of the footer here */
-        height: 40px;
+        min-height: 60px;
         background-color: #bcbcbc;
         color: #000000;
     }
     
     .text-muted {
-        margin-top: 10px;
+        margin-top: 20px;
     }
     /* @media screen and (max-width: 991px) {
         .brand-right {
