--- a/css/main.css
+++ b/css/main.css
@@ -340,6 +340,7 @@
         font-size: 1.5em;
         background-color: #ffffff;
         border-radius: 3px;
+        margin: 10px 10px 10px 10px;
     }
     
     .btn:focus,
