Move Auction photo from gallery to site

--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@
     }
     
     .img-slide3 {
-        background-image: url(https://icgallery.flexstart.me/i.php?/upload/2016/11/28/20161128030431-706515b8-xl.jpg);
+        background-image: url(/img/auction.jpg);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
