Add Copyright Notice

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <p class="text-muted pull-left">Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
+        <p class="text-muted pull-left">&copy; {{.Now "2006"}} Immaculate Conception Church &#124; Millhousen, Indiana - Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
         <p class="text-muted pull-right"><a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> - Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
     </div>
 </footer>
