--- a/templates/header.html
+++ b/templates/header.html
@@ -47,6 +47,7 @@
                         <li><a href="/faith-formation/rcia/">RCIA</a></li>
                     </ul>
                 </li>
+                <li><a href="/youth-ministry/">Youth Ministry</a></li>
                 <li><a href="/sacraments/">Sacraments</a></li>
                 <li><a href="/calendar/">Events Calendar</a></li>
                 <li><a href="/bulletins/">Bulletins</a></li>
