--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,12 @@
 <footer class="footer">
     <div class="container">
-        <p class="text-muted pull-left">&copy; {{.Now "2006"}} Immaculate Conception Church &#124; Millhousen, Indiana - Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
-        <p class="text-muted pull-right"><a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> - Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
+
+
+
+        <p class="text-muted pull-right">&copy; {{.Now "2006"}} Immaculate Conception Church - Millhousen, Indiana &#124; Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a> &#124; <a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> &#124; Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
+
+
+
     </div>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
