Fix Background Image

--- a/css/main.css
+++ b/css/main.css
@@ -270,7 +270,7 @@
     } */
     
     .img-slide1 {
-        background-image: url(/img/christmas-altar.jpg);
+        background-image: url(/img/auction.jpg);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
