--- a/templates/header.html
+++ b/templates/header.html
@@ -54,9 +54,9 @@
                 <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
                 <li><a href="https://gallery.millhousenchurch.com/">Photo Gallery</a></li>
             </ul>
-		<!--<ul class="nav navbar-nav navbar-right">
-              		<li><a href="/events/auction/">Auction</a></li>
-		</ul>-->
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://onrealm.org/millhousenchurch/">Login to Realm</a></li>
+            </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
