--- a/templates/header.html
+++ b/templates/header.html
@@ -56,6 +56,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="https://onrealm.org/millhousenchurch/">Login to Realm</a></li>
+                <li><a href="https://onrealm.org/millhousenchurch/Give">Donate</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
