Disable Auction Buttons

--- a/templates/header.html
+++ b/templates/header.html
@@ -55,7 +55,7 @@
                 <li><a href="https://gallery.millhousenchurch.com/">Photo Gallery</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/events/auction/">Auction</a></li>
+                <!-- <li><a href="/events/auction/">Auction</a></li>-->
                 <li><a href="https://onrealm.org/millhousenchurch/">Login to Realm</a></li>
                 <li><a href="https://onrealm.org/millhousenchurch/Give">Donate</a></li>
             </ul>
