Change Footer Credit

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
 
 
 
-        <p class="text-muted pull-right">&copy; {{.Now "2006"}} Immaculate Conception Church - Millhousen, Indiana &#124; Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a> &#124; <a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> &#124; Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
+        <p class="text-muted pull-right">&copy; {{.Now "2006"}} Immaculate Conception Church - Millhousen, Indiana &#124; Developed and Hosted by <a href="https://kstr.us">Kenny Stier</a> in <a href="https://millhousen.com">Millhousen</a> &#124; <a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> &#124; Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
 
 
 
