--- a/templates/header.html
+++ b/templates/header.html
@@ -57,7 +57,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <!-- <li><a href="/events/auction/">Auction</a></li>-->
                 <li><a href="https://onrealm.org/millhousenchurch/">Login to Realm</a></li>
-                <li><a href="https://onrealm.org/millhousenchurch/Give">Donate</a></li>
+                <li><a href="https://secure.acceptiva.com/?cst=Hg94dq&giveparish=10097%20Immaculate%20Conception,%20Millhousen">Donate</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
